slash-1.0.6, 2000.06.xx
-----------------------

*	Fix for all TEXTAREA sections, converting all < and > and &
	characters to HTML entities

*	Add text next to "moderate" button to warn authors that
	checkbox is for deleting comments

*	Change redirect code to use URI->new_abs->canonical

*	search.pl should now properly count rows in result-set so
	the "more left" link at the bottom now works. This code
	was initially removed due to performance reasons

*	Fixed bug in search.pl where users could not click back to
	the first page of results using the "xx previous matches"
	link (Joris Trooster)

*	When performing a user search using search.pl, it will also
	check the fakeemail field, in addition to the nickname

*	Fix to allow "%" and "#" in URLs for Slash::fixurl()

*	No longer show comments to regular users in submit.pl

*	Disallow most characters from nicknames in users.pl

*	Add session-based cookies for Anonymous Coward for use
	with formkeys in submission and comment posting forms
	in Slash.pm, comments.pl

*	Slash::setCookie() can be called with an addition boolean
	parameter to set temporary, session-based cookies

*	Fixed bug that allowed users to moderate a single comment more
	than once

*	Submission titles are now shown on the browser's titlebar

*	Section articles appearing on the main index now also have a link
	to the section's home page by the "Read More" link (Russ Nelson)

*	Fixed bug where authors could moderate if they were logged in as
	authors, but not logged in as a registered user

*	Added 'active' field to moderatorlog (yes, it probably
	could have been called something better) to track which
	moderation attempts actually succeed. Done mainly due to the
	fact that there are some situations where we may want to make
	certain moderations that don't get applied still applicable to
	M2 review. comments.pl and article.pl have been made aware of
	this new field

*	Metamoderation results are now counted. The number of times a 